Перерабоотана кнопка удаления

--- a/Module_5/MainWindow.xaml
+++ b/Module_5/MainWindow.xaml
@@ -19,7 +19,7 @@
                 <DataTemplate>
                     <DockPanel>
                         <TextBlock Text="{Binding}" VerticalAlignment="Center" TextWrapping="Wrap" />
-                        <Image Source="/Исходные изображения/Кнопка-закрытия.png" Width="20" Height="20" MouseDown="RemoveTask_Click" Tag="{Binding RelativeSource={RelativeSource Self}}" Margin="-20, 90,0,0" Cursor="Hand"/>
+                        <Image Source="/Исходные изображения/Кнопка-закрытия.png" Width="20" Height="20" MouseDown="RemoveTask_Click" Tag="{Binding RelativeSource={RelativeSource Self}}" Margin="-20, 0, -45, 0" Cursor="Hand"/>
                     </DockPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
