--- a/Module_5/MainWindow.xaml
+++ b/Module_5/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Задачник" Height="500" Width="850" SizeToContent="Manual"
-        MinWidth="850" MinHeight="500" MaxWidth="850" MaxHeight="500">
+        MinWidth="850" MinHeight="500" MaxWidth="850" MaxHeight="500"
+        Icon="/Исходные изображения/Логотип.ico">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/Исходные изображения/Фон.png" />
@@ -25,5 +26,6 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <TextBox x:Name="textBoxTask" Margin="79,51,79,382" FontSize="20" FontFamily="Bahnschrift SemiBold"/>
+  
     </Grid>
 </Window>
